feat(sonarr): parse client and grab parsed metadata storage
